Added margin on button

--- a/style.scss
+++ b/style.scss
@@ -118,8 +118,9 @@ body {
   .button {
     text-align: center;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-top: 80px;
+    margin: 16px;
   }
 
   button {
