--- a/style.scss
+++ b/style.scss
@@ -118,9 +118,8 @@ body {
   .button {
     text-align: center;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-top: 80px;
-    margin: 16px;
   }
 
   button {
