--- a/style.css
+++ b/style.css
@@ -92,9 +92,8 @@ h6 {
 .button {
   text-align: center;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin-top: 80px;
-  margin: 16px;
 }
 
 button {
